--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,15 +7,10 @@ jobs:
 
     runs-on: ${{ matrix.os }}
     strategy:
-      max-parallel: 2
+      max-parallel: 5
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        python-version: [3.7, 3.6, 3.8]
-        exclude:
-          - os: windows-latest
-            python-version: 3.6
-          - os: windows-latest
-            python-version: 3.8
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: [3.6, 3.7, 3.8]
 
     steps:
     - name: Set up Python ${{ matrix.python-version }}
@@ -51,11 +46,15 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
-    - name: Test & check coverage
+    - name: Smoke tests
+      # Run tox using the version of Python in `PATH`
+      run: |
+        tox -e py -- --capture=no --log-cli-level=INFO -- tests/smoke/
+    - name: System tests & check coverage
       if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && github.event_name == 'push' && (startsWith(github.ref, 'refs/tags') ||  github.ref == 'refs/heads/master')
       # Run tox using the version of Python in `PATH`
       run: |
-        tox -e py -- --capture=no --log-cli-level=INFO
+        tox -e py -- --capture=no --log-cli-level=INFO -- tests/system/
         tox -e report
     - name: Upload coverage report
       if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && github.event_name == 'push' && (startsWith(github.ref, 'refs/tags') ||  github.ref == 'refs/heads/master')
