--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,12 @@ deps =
 commands =
     pytest --basetemp="{envtmpdir}" {posargs}
 
+[testenv:cli] # no coverage nor parallelism
+deps = 
+    pytest
+commands =
+    ssm {posargs}
+
 [testenv:no-coverage] # no coverage
 commands = 
     pytest -n 5 --basetemp="{envtmpdir}" {posargs}
