--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ install_requires =
     boto3
     sagemaker
     pandas
+    configargparse
 python_requires = >=3.6
 
 [options.packages.find]
@@ -42,3 +43,7 @@ docs =
     sphinx>=2.0.0
 testing =
     pytest>=4.0.0
+
+[options.entry_points]
+console_scripts =
+    ssm = simple_sagemaker.cli:main
