--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ passenv =
     AWS_SESSION_TOKEN
 
 commands =
-    pytest --cov=simple_sagemaker --cov-append --cov-report=term-missing -n 5 --basetemp="{envtmpdir}"  {posargs} 
+    pytest --cov=simple_sagemaker --cov-append --cov-report=term-missing -n 5 --basetemp="{envtmpdir}" {posargs} 
 
 [testenv:single_proc] # no coverage nor parallelism
 deps = 
@@ -25,7 +25,7 @@ deps =
 commands =
     pytest --basetemp="{envtmpdir}" {posargs}
 
-[testenv:cli] # no coverage nor parallelism
+[testenv:ssm] # run ssm cli
 deps = 
     pytest
 commands =
