--- a/tox.ini
+++ b/tox.ini
@@ -93,3 +93,4 @@ commands =
 
 # Run a single test, e.g. for debugging
 # tox -e single_proc -- --capture=no --log-cli-level=INFO -k single_file
+# tox -e ssm -- -p simple-sagemaker-example-cli -t task1 -e ./examples/cli_simple/worker.py --cs -o ./output --use_spot 0
