Update cli & cli test 1. 2 tasks in test 2. cli can use additional inputs and hyperparams 3. bug fixes

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,14 @@ deps =
 commands =
     ssm {posargs}
 
+[testenv:bash] # run ssm cli
+deps = 
+whitelist_externals = 
+    /bin/bash
+commands =
+    bash {posargs}
+
+
 [testenv:no-coverage] # no coverage
 commands = 
     pytest -n 5 --basetemp="{envtmpdir}" {posargs}
@@ -93,4 +101,9 @@ commands =
 
 # Run a single test, e.g. for debugging
 # tox -e single_proc -- --capture=no --log-cli-level=INFO -k single_file
+
+# Run an ssm command line
 # tox -e ssm -- -p simple-sagemaker-example-cli -t task1 -e ./examples/cli_simple/worker.py --cs -o ./output --use_spot 0
+
+# Ececute a shell command
+# tox -e bash --  ./examples/cli_simple/run.sh ./output
