--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,9 +30,6 @@ jobs:
     - name: Get pip cache dir
       id: pip-cache
       run: |
-        echo ${{ github }}
-        echo ${{ github.base_ref }}
-        echo ${{ github.ref }}
         echo "::set-output name=dir::$(pip cache dir)"
     - name: pip cache
       uses: actions/cache@v2
@@ -62,19 +59,19 @@ jobs:
       run: |
         tox -e py -- --capture=no --log-cli-level=INFO tests/smoke/
     - name: System tests & check coverage
-      if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'refs/heads/master')
+      if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'master')
       # Run tox using the version of Python in `PATH`
       run: |
         tox -e py -- --capture=no --log-cli-level=INFO tests/system/
         tox -e report
     - name: Upload coverage report
-      if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'refs/heads/master')
+      if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'master')
       uses: actions/upload-artifact@v2
       with:
         name: coverage
         path: htmlcov
     - name: Upload examples output
-      if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'refs/heads/master')
+      if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'master')
       uses: actions/upload-artifact@v2
       with:
         name: examples_output
@@ -82,12 +79,12 @@ jobs:
           .tox/py/tmp/*/*/output/
           !.tox/py/tmp/*/*current/output/
     - name: Build the package
-      if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'refs/heads/master')
+      if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'master')
       run: |
         pip install setuptools wheel twine
         python setup.py sdist bdist_wheel
     - name: Upload dist files
-      if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'refs/heads/master')
+      if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'master')
       uses: actions/upload-artifact@v2
       with:
         name: dist
