--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist = py37, py36, py38
 
-[testenv] # the fefault env - coverage + parallalism
+[testenv] # the default env - coverage + parallalism
 whitelist_externals = 
     /bin/echo
     /bin/ls
