--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -71,7 +71,7 @@ jobs:
         name: coverage
         path: htmlcov
     - name: Upload examples output
-      if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'master')
+      if: (!cancelled()) && matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'master')
       uses: actions/upload-artifact@v2
       with:
         name: examples_output
