--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -90,7 +90,7 @@ jobs:
   publish:
 
     runs-on: ubuntu-latest
-    needs: build
+    #needs: build
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/heads/master')
 
     steps:
