--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,7 +10,7 @@ jobs:
   build:
 
     runs-on: ${{ matrix.os }}
-    if: github.event_name != 'push' || (!startsWith(github.ref, 'refs/heads/master'))
+    #if: github.event_name != 'push' || (!startsWith(github.ref, 'refs/heads/master'))
     
     strategy:
       max-parallel: 5
@@ -56,19 +56,19 @@ jobs:
       run: |
         tox -e py -- --capture=no --log-cli-level=INFO tests/smoke/
     - name: System tests & check coverage
-      if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'master')
+      if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/heads/master') || startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'master')
       # Run tox using the version of Python in `PATH`
       run: |
         tox -e py -- --capture=no --log-cli-level=INFO tests/system/
         tox -e report
     - name: Upload coverage report
-      if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'master')
+      if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/heads/master') || startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'master')
       uses: actions/upload-artifact@v2
       with:
         name: coverage
         path: htmlcov
     - name: Upload examples output
-      if: (!cancelled()) && matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'master')
+      if: (!cancelled()) && matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/heads/master') || startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'master')
       uses: actions/upload-artifact@v2
       with:
         name: examples_output
@@ -76,12 +76,12 @@ jobs:
           .tox/py/tmp/*/*/output/
           !.tox/py/tmp/*/*current/output/
     - name: Build the package
-      if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'master')
+      if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/heads/master') || startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'master')
       run: |
         pip install setuptools wheel twine
         python setup.py sdist bdist_wheel
     - name: Upload dist files
-      if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'master')
+      if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/heads/master') || startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'master')
       uses: actions/upload-artifact@v2
       with:
         name: dist
@@ -90,7 +90,7 @@ jobs:
   publish:
 
     runs-on: ubuntu-latest
-    #needs: build
+    needs: build
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/heads/master')
 
     steps:
