--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = simple_sagemaker
 version = attr: simple_sagemaker.VERSION
-description = A simple python wrapper around AWS SageMaker, to easily empower your data science projects or just to distribute a set of processing tasks
+description = A *simpler* and *cheaper* way to distribute python (training) code on machines of your choice in the (AWS) cloud.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/shiftan/simple_sagemaker
