--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ commands =
 [testenv:bash] # run ssm cli
 deps = 
 whitelist_externals = 
-    /bin/bash
+    /usr/bin/bash
 commands =
     bash {posargs}
 
