--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ passenv =
     AWS_SESSION_TOKEN
 
 commands =
-    pytest --cov=simple_sagemaker --cov-append --cov-report=term-missing -n 5 --basetemp="{envtmpdir}" {posargs} 
+    pytest --cov=simple_sagemaker --cov-append --cov-report=term-missing -n 4 --basetemp="{envtmpdir}" {posargs} 
 
 [testenv:single_proc] # no coverage nor parallelism
 deps = 
@@ -34,14 +34,14 @@ commands =
 [testenv:bash] # run ssm cli
 deps = 
 whitelist_externals = 
-    /bin/bash
+    /usr/bin/bash
 commands =
     bash {posargs}
 
 
 [testenv:no-coverage] # no coverage
 commands = 
-    pytest -n 5 --basetemp="{envtmpdir}" {posargs}
+    pytest -n 4 --basetemp="{envtmpdir}" {posargs}
 deps =
     pytest-xdist
 
