Add documentation build

--- a/tox.ini
+++ b/tox.ini
@@ -99,6 +99,20 @@ commands =
     python setup.py sdist bdist_wheel
     twine upload dist/*
 
+[testenv:docs]
+description = invoke sphinx-build to build the HTML docs
+basepython = python3.7
+changedir = docs
+deps = 
+    sphinx
+    sphinx-rtd-theme
+whitelist_externals = 
+    /usr/bin/make
+commands = 
+    sphinx-apidoc -o ./source ../src/simple_sagemaker
+    make html
+
+
 # Run a single test, e.g. for debugging
 # tox -e single_proc -- --capture=no --log-cli-level=INFO -k single_file
 
