Documentation updates + minor task_toolkit fix

--- a/tox.ini
+++ b/tox.ini
@@ -109,7 +109,7 @@ deps =
 whitelist_externals = 
     /usr/bin/make
 commands = 
-    sphinx-apidoc -o ./source ../src/simple_sagemaker
+    sphinx-apidoc -f -o ./source ../src/simple_sagemaker ../src/simple_sagemaker/sm_task.py ../src/simple_sagemaker/s3_sync.py ../src/simple_sagemaker/iam_utils.py ../src/simple_sagemaker/ecr_sync.py ../src/simple_sagemaker/cli.py
     make html
 
 
