--- a/tox.ini
+++ b/tox.ini
@@ -49,8 +49,8 @@ deps =
 skip_install = true
 deps = coverage
 commands =
-    coverage html -i --include="*simple_sagemaker*" --omit="*task_toolkit*"
-    coverage report --include="*simple_sagemaker*" --omit="*task_toolkit*" --fail-under=85
+    coverage html -i --include="*simple_sagemaker*" --omit="*worker_toolkit*"
+    coverage report --include="*simple_sagemaker*" --omit="*worker_toolkit*" --fail-under=85
     coverage report --help
 
 [testenv:clean] # clean up coverage data
