Refactor CLI 1. Remove unneeded params from WorkerConfig 2. CLI - split to sub commands

--- a/tox.ini
+++ b/tox.ini
@@ -117,7 +117,7 @@ commands =
 # tox -e single_proc -- --capture=no --log-cli-level=INFO -k single_file
 
 # Run an ssm command line
-# tox -e ssm -- -p simple-sagemaker-example-cli -t task1 -e ./examples/cli_simple/worker.py --cs -o ./output --use_spot 0
+# tox -e ssm -- run -p simple-sagemaker-example-cli -t task1 -e ./examples/cli_simple/worker.py --cs -o ./output --use_spot 0
 
 # Ececute a shell command
 # tox -e bash --  ./examples/cli_simple/run.sh ./output
