Testing workfflow issue fix + delete unneeded files on shell code

--- a/tox.ini
+++ b/tox.ini
@@ -121,3 +121,6 @@ commands =
 
 # Ececute a shell command
 # tox -e bash --  ./examples/cli_simple/run.sh ./output
+
+# Ececute a shell job
+# tox -e ssm -- shell -p shell-cli -t shell-cli-task --cmd_line "ls -la" -o ./output --dir_files=./src/simple_sagemaker
