--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -72,7 +72,7 @@ jobs:
         name: examples_output
         path: |
           .tox/py/tmp/*/*/*/output/
-          !.tox/py/tmp/*/*/*current/output/
+          !.tox/py/tmp/*/*current/*/output/
     - name: Build the package
       if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/heads/master') || startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'master')
       run: |
