Add "FROM __BASE_IMAGE__" if it's not there..

--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,6 @@ commands =
 
 [testenv:ssm] # run ssm cli
 deps = 
-    pytest
 commands =
     ssm {posargs}
 
@@ -124,3 +123,4 @@ commands =
 
 # Ececute a shell job
 # tox -e ssm -- shell -p shell-cli -t shell-cli-task --cmd_line "ls -la" -o ./output --dir_files=./src/simple_sagemaker
+# tox -e ssm -- shell -p shell-cli -t shell-cli-task --cmd_line "ls -la" -o ./output --df "RUN pip3 install pandas==0.25.3 scikit-learn==0.21.3" --repo_name "tt_repo" --aws_repo_name "tt_repo"
