CLI vs API naming standardization + distributed training + documentation and testing updates (#21)
* Readme updates

* Readme updates

* Refactor worker_lib

* Linting...

* Worker lib fixes

* Fix expected output

* ...

* Fix expected output

* Refactor CLI
1. Remove unneeded params from WorkerConfig
2. CLI - split to sub commands

* Linting...

* A CLI bug fix

* Add support for CMD line tasks

* Fix cmd linting + add example

* Fix minor example issue

* Readme and example update

* ...

* Add model_uri to CLI

* ...

* ...

* Update CLI CMD example expected output

* Remove unneeded code

* Update expected output

* Linting...

* Fix expected output...

* Fix the tests

* Update readme

* Rename CMD to shell

* Rename input_ to channel_

* Fixes...

* ...

* Fixes...

* Another renaming fix

* Minor naming examples update

* Additional examples update

* Additional minor updates to testing and readme

* ...

* Task renaming fixes

* Readme updates + worker_state-> instance_state + fix workflow to save examples output

* Readme + linting

* Testing workfflow issue fix + delete unneeded files on shell code

* Linting...

* Update readme_examples expected output

* Readme updates

* Minor testing fix

* Update expected output

* Fix workflow

* Update README.md

* Fix expected output

* Readme + smoke tests update

* Linting...

* Minor examples update

* Minor examples update

* Standartization of CLI vs API paramater naming

* Add "FROM __BASE_IMAGE__" if it's not there..

* More naming standartization

* Add support for Tensorflow's distribution parameter

* Spelling + naming bug fix

* Renaming bug fixes

* Linting...

--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,6 @@ commands =
 
 [testenv:ssm] # run ssm cli
 deps = 
-    pytest
 commands =
     ssm {posargs}
 
@@ -117,10 +116,11 @@ commands =
 # tox -e single_proc -- --capture=no --log-cli-level=INFO -k single_file
 
 # Run an ssm command line
-# tox -e ssm -- run -p simple-sagemaker-example-cli -t task1 -e ./examples/cli_simple/worker.py --cs -o ./output --use_spot 0
+# tox -e ssm -- run -p simple-sagemaker-example-cli -t task1 -e ./examples/cli_simple/worker.py --cs -o ./output --use_spot_instances 0
 
 # Ececute a shell command
 # tox -e bash --  ./examples/cli_simple/run.sh ./output
 
 # Ececute a shell job
 # tox -e ssm -- shell -p shell-cli -t shell-cli-task --cmd_line "ls -la" -o ./output --dir_files=./src/simple_sagemaker
+# tox -e ssm -- shell -p shell-cli -t shell-cli-task --cmd_line "ls -la" -o ./output --df "RUN pip3 install pandas==0.25.3 scikit-learn==0.21.3" --repo_name "tt_repo" --aws_repo_name "tt_repo"
