Local_mode (with S3 for now)+ testing from smoke

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ deps =
     pytest-xdist
     coverage
     pytest-cov
+    sagemaker[local]
 passenv = 
     AWS_DEFAULT_REGION
     AWS_REGION
@@ -27,6 +28,9 @@ commands =
 
 [testenv:ssm] # run ssm cli
 deps = 
+    pyyaml
+    sagemaker[local]
+
 commands =
     ssm {posargs}
 
