--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,7 @@
             "env": {
                 "PYTHONPATH": "${workspaceFolder}/src"
             },
-            "args": [
+            "args2": [
                 "shell",
                 "-p", "tests/aaa", 
                 //"--instance_type", "ml.p3.2xlarge",
@@ -46,7 +46,8 @@
                 "--ks",
                 "--aa", "bb",
                 "--cc", "dd",
-            ]
+            ],
+            "args": ["shell", "-p", "shell-cli", "-t", "shell-cli-task22", "--cmd_line", "ls -la", "-o", "./output", "--local", "--it", "local", "--no_spot"],
         }
     ]
 }
