--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,7 @@ jobs:
     #if: github.event_name != 'push' || (!startsWith(github.ref, 'refs/heads/master'))
     
     strategy:
-      max-parallel: 5
+      max-parallel: 10
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: [3.6, 3.7, 3.8]
@@ -53,7 +53,7 @@ jobs:
         aws-region: us-east-1
     - name: Smoke tests
       run: |
-        tox -e single_proc -- --capture=no --log-cli-level=INFO tests/smoke/
+        tox -e py -- --capture=no --log-cli-level=INFO tests/smoke/
     - name: System tests & check coverage
       if: matrix.python-version == '3.7' && matrix.os == 'ubuntu-latest' && (startsWith(github.ref, 'refs/heads/master') || startsWith(github.ref, 'refs/tags') ||  github.base_ref  == 'master')
       run: |
