--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,7 +46,7 @@ jobs:
     - name: Lint
       run: |
         tox -e lint
-    - name: Configure AWS Credentials
+    - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -55,8 +55,8 @@ jobs:
     - name: Prepare windows environment
       if : matrix.os == 'windows-latest'
       run: |
-        powershell restart-service *docker*
-        powershell "&$Env:ProgramFiles\Docker\Docker\DockerCli.exe" -SwitchLinuxEngine
+        restart-service *docker*
+        &$Env:ProgramFiles\Docker\Docker\DockerCli.exe -SwitchLinuxEngine
     - name: Smoke tests
       run: |
         tox -e single_proc -- --capture=no --log-cli-level=INFO tests/smoke/
