--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -56,6 +56,7 @@ jobs:
       if : matrix.os == 'windows-latest'
       run: |
         restart-service *docker*
+        dir $Env:ProgramFiles\Docker -s
         &$Env:ProgramFiles\Docker\Docker\DockerCli.exe -SwitchLinuxEngine
     - name: Smoke tests
       run: |
