--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -56,6 +56,8 @@ jobs:
     - name: Prepare windows environment
       if : matrix.os == 'windows-latest'
       run: |
+        Install-WindowsFeature Hyper-V
+        Install-WindowsFeature containers
         restart-service *docker*
         dir $Env:ProgramFiles\Docker -s
         &$Env:ProgramFiles\Docker\docker.exe --help
