--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,7 @@ commands =
 
 [testenv:single_proc] # no coverage nor parallelism
 deps = 
+    sagemaker[local]
     pytest
 commands =
     pytest --basetemp="{envtmpdir}" {posargs}
