--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,7 @@ commands =
 
 [testenv:single_proc] # no coverage nor parallelism
 deps = 
+    sagemaker[local]
     pytest
 commands =
     pytest --basetemp="{envtmpdir}" {posargs}
@@ -54,7 +55,7 @@ skip_install = true
 deps = coverage
 commands =
     coverage html -i --include="*simple_sagemaker*" --omit="*worker_toolkit*"
-    coverage report --include="*simple_sagemaker*" --omit="*worker_toolkit*" --fail-under=85
+    coverage report --include="*simple_sagemaker*" --omit="*worker_toolkit*" --fail-under=84
     coverage report --help
 
 [testenv:clean] # clean up coverage data
