--- a/tox.ini
+++ b/tox.ini
@@ -54,8 +54,8 @@ deps =
 skip_install = true
 deps = coverage
 commands =
-    coverage html -i --include="*simple_sagemaker*" --omit="*worker_toolkit*"
-    coverage report --include="*simple_sagemaker*" --omit="*worker_toolkit*" --fail-under=84
+    coverage html -i --include="*simple_sagemaker*" --omit="*worker_toolkit*","*shell_launcher.py"
+    coverage report --include="*simple_sagemaker*" --omit="*worker_toolkit*","*shell_launcher.py" --fail-under=85
     coverage report --help
 
 [testenv:clean] # clean up coverage data
