--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = simple_sagemaker
 version = attr: simple_sagemaker.VERSION
-description = A *simpler* and *cheaper* way to distribute python (training) code on machines of your choice in the (AWS) cloud.
+description = A **simpler** and **cheaper** way to distribute work (python/shell/training) work on machines of your choice in the (AWS) cloud
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/shiftan/simple_sagemaker
